--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -12,6 +12,7 @@ $font-family:(
     colombo-bold: "Post No Bills Colombo Bold",
     khmer: "Khmer",
     khmer-light: "Khmer Light",
+    khmer-semibold: "Khmer semiBold",
 );
 
 $font-size: (
