--- a/css/stylesfonts.css
+++ b/css/stylesfonts.css
@@ -49,14 +49,22 @@
 @font-face {
     font-family: 'Khmer';
     src: url('../fonts/NotoSansKhmer-Regular.ttf') format('truetype');
-    font-weight: 400;
     font-style: normal;
     font-display: swap;
+    font-weight: bold;
 }
 
 @font-face {
     font-family: 'Khmer Light';
     src: url('../fonts/NotoSansKhmer-Light.ttf') format('truetype');
+    font-style: normal;
+    font-display: swap;
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'Khmer semiBold';
+    src: url('../fonts/NotoSansKhmer-SemiBold.ttf') format('truetype');
     font-style: normal;
     font-display: swap;
     font-weight: 100;
