--- a/css/style.css
+++ b/css/style.css
@@ -228,10 +228,10 @@
 }
 .projects .swiper-projects {
   grid-column: 1/3;
-  grid-row: 3/4;
-  margin: 0 auto;
-  max-width: 300px;
-  margin-top: 7%;
+  grid-row: 3/5;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  max-width: 400px;
   overflow: visible;
   /* ARROWS */
 }
@@ -277,7 +277,7 @@
 }
 .contact .p-contact {
   grid-column: 1/2;
-  grid-row: 3/4;
+  grid-row: 3/5;
   width: 60%;
   height: 250px;
   margin-top: 2vw;
