--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -10,11 +10,10 @@
    
     .swiper-projects {
         grid-column: 1 / 3;
-        grid-row: 3 / 4;
-        
-        margin: 0 auto;
-        max-width: 300px;
-        margin-top: 7%;
+        grid-row: 3 / 5;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        max-width: 400px;
         overflow: visible;
 
         .swiper-slide {
