media queries en todas las paginas

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -72,8 +72,9 @@
 
         .b-img {
             position: absolute;
-            width: calc(4em + 28vw);
-            height: calc(4em + 30vw);
+            top: 4%;
+            width: calc(5em + 32vw);
+            height: calc(4em + 40vw);
             z-index: 0;
         }
 
