--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@
   background-color: #454545;
   text-align: center;
 }
-.home img {
+.home .arrow {
   position: absolute;
   width: calc(0.5em + 1vw);
-  margin-top: calc(11em + 26vw);
+  margin-top: calc(13em + 25vw);
   -webkit-animation: arrow 0.5s 2s infinite ease-out alternate;
           animation: arrow 0.5s 2s infinite ease-out alternate;
 }
@@ -56,13 +56,8 @@
   letter-spacing: 0.2vw;
 }
 .home .b-h1 {
-  position: absolute;
-  width: calc(20em + 70vw);
-  height: 100vh;
-  background-image: url(../img/b-h1.png);
-  background-repeat: no-repeat;
-  background-size: 38%;
-  background-position: center;
+  width: 35vw;
+  height: 90vh;
 }
 @-webkit-keyframes neon {
   0%, 100% {
@@ -165,8 +160,9 @@
 }
 .about .card-profile .b-img {
   position: absolute;
-  width: calc(4em + 28vw);
-  height: calc(4em + 30vw);
+  top: 4%;
+  width: calc(5em + 32vw);
+  height: calc(4em + 40vw);
   z-index: 0;
 }
 @-webkit-keyframes typewriter {
@@ -196,7 +192,7 @@
 .skills img {
   grid-column: 2/3;
   grid-row: 2/5;
-  width: calc(1em + 35vw);
+  width: calc(10em + 27vw);
   justify-self: start;
 }
 .skills .p-skills {
@@ -289,8 +285,8 @@
   left: 50%;
   align-self: center;
   position: absolute;
-  width: calc(5em + 43vw);
-  height: calc(5em + 38vw);
+  width: calc(12em + 36vw);
+  height: calc(10em + 35vw);
   z-index: 0;
 }
 .contact form {
@@ -310,36 +306,28 @@
   gap: 0.7em;
 }
 .contact form input::-moz-placeholder, .contact form textarea::-moz-placeholder {
-  font-size: 1.2em;
+  font-size: calc(0.8em + 0.5vw);
   font-family: "Khmer";
   color: rgb(191, 191, 191);
 }
 .contact form input:-ms-input-placeholder, .contact form textarea:-ms-input-placeholder {
-  font-size: 1.2em;
+  font-size: calc(0.8em + 0.5vw);
   font-family: "Khmer";
   color: rgb(191, 191, 191);
 }
 .contact form input::placeholder,
 .contact form textarea::placeholder {
-  font-size: 1.2em;
+  font-size: calc(0.8em + 0.5vw);
   font-family: "Khmer";
   color: rgb(191, 191, 191);
 }
-.contact form input.name {
-  width: 100%;
-  height: 7vh;
-}
-.contact form input.email {
-  width: 100%;
-  height: 7vh;
-}
-.contact form input.subject {
+.contact form input.name, .contact form input.email, .contact form input.subject {
   width: 100%;
   height: 7vh;
 }
 .contact form input,
 .contact form textarea {
-  font-size: 1em;
+  font-size: calc(0.5em + 0.5vw);
   font-family: "Khmer";
   padding: 1em 1em 1em 1em;
   border-radius: 0.4em;
@@ -347,7 +335,7 @@
 }
 .contact form button {
   border: 0;
-  font-size: 1em;
+  font-size: calc(0.5em + 0.6vw);
   color: white;
   font-family: "Khmer";
   background-color: #29D7CC;
@@ -362,7 +350,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  font-size: 0.8em;
+  font-size: calc(0.5em + 0.5vw);
   margin-left: -12%;
 }
 .contact .credits span {
@@ -511,6 +499,10 @@ main {
 }
 
 @media (max-width: 767px) {
+  .home .b-h1 {
+    width: 70vw;
+    height: 60vh;
+  }
   .container-header {
     gap: 60vw;
   }
@@ -521,42 +513,84 @@ main {
     width: 3vw;
     height: 2vh;
   }
-  .about {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-  }
   .about .p-about {
-    grid-row: 2/3;
+    grid-row: 4/6;
     grid-column: 1/3;
-    margin-left: 10%;
-    margin-top: -40%;
-  }
-  .about .b-img {
-    grid-column: 1/3;
-    grid-row: 1/2;
-    background-size: 35%;
-    background-position: 38vw 20vw;
+    justify-self: center;
   }
   .about .card-profile {
     grid-column: 1/3;
-    grid-row: 1/2;
-    margin-top: 35%;
+    grid-row: 3/4;
+    gap: 0.3em;
   }
   .about .card-profile .rrss {
-    margin-top: -23%;
-    margin-left: 3%;
+    grid-column: 2;
+    gap: 0.4em;
+    justify-content: center;
   }
-  .about .card-profile img.git {
-    margin-left: 10%;
+  .about .card-profile .b-img {
+    justify-self: end;
+    left: 21%;
+    top: 17%;
   }
-  .about .card-profile img.lin {
-    margin-left: 2%;
+  .about .card-profile .p-animation {
+    display: none;
   }
-  .about .card-profile img {
-    margin-left: 50%;
-    margin-top: -25%;
+  .skills .interests {
+    display: none;
   }
-  .about .card-profile .salute p {
-    margin-left: 34%;
+  .skills .p-skills {
+    grid-column: 1/3;
+    width: 76%;
+  }
+  .skills img {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    margin-top: 5vw;
+    justify-self: center;
+  }
+  .projects .swiper-projects {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    max-width: 150px;
+  }
+  .projects .swiper-projects .swiper-slide {
+    min-height: 100px;
+  }
+  .projects .swiper-projects .swiper-button-next,
+.projects .swiper-projects .swiper-button-prev {
+    display: none;
+  }
+  .contact .p-contact {
+    grid-column: 1/3;
+    grid-row: 3;
+    width: 75%;
+    height: 0px;
+  }
+  .contact img {
+    display: none;
+  }
+  .contact form {
+    width: 80%;
+    grid-column: 1/3;
+    grid-row: 4/5;
+    gap: 0.3em;
+  }
+  .contact form label {
+    gap: 0.3em;
+  }
+  .contact form input,
+.contact form textarea {
+    padding: 0.4em 0.4em 0.4em 0.4em;
+    border-radius: 0.4em;
+  }
+  .contact .credits {
+    grid-column: 1/3;
+    grid-row: 5/6;
+    font-size: 0.6em;
+    align-self: center;
+  }
+  .contact .credits span {
+    width: 43vw;
   }
 }
