--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -13,7 +13,7 @@
         width: 60%;
         height: 250px;
         margin-top: 2vw;
-        font-size: calc(0.6em + 0.6vw);
+        font-size: conf.fontSize(font-body);
     }
 
     img{
@@ -22,8 +22,8 @@
         left: 50%;
         align-self: center;
         position: absolute;
-        width: calc(5em + 43vw);
-        height: calc(5em + 38vw);
+        width: calc(12em + 36vw);
+        height: calc(10em + 35vw);
         z-index: 0;
     }
 
@@ -47,30 +47,20 @@
 
         input::placeholder,
         textarea::placeholder {
-            font-size: 1.2em;
+            font-size: calc(0.8em + 0.5vw);
             font-family: conf.fontFamily(khmer);
             color:rgb(191, 191, 191);
         }
 
-        input.name {
+        input.name, input.email,  input.subject{
             width: 100%;
             height: 7vh;
 
-        }
-
-        input.email {
-            width: 100%;
-            height: 7vh;
-        }
-
-        input.subject {
-            width: 100%;
-            height: 7vh;
         }
 
         input,
         textarea {
-            font-size: 1em;
+            font-size: calc(0.5em + 0.5vw);
             font-family: conf.fontFamily(khmer);
             padding: 1em 1em 1em 1em;
             border-radius: 0.4em;
@@ -79,7 +69,7 @@
 
         button {
             border: 0;
-            font-size: 1em;
+            font-size: calc(0.5em + 0.6vw);
             color: white;
             font-family: conf.fontFamily(khmer);
             background-color: conf.$acento-color;
@@ -97,7 +87,7 @@
         display: flex;
         flex-direction: column;
         gap: 1em;
-        font-size: 0.8em;
+        font-size: calc(0.5em + 0.5vw);
         margin-left: -12%;
 
         span {
