--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -79,6 +79,15 @@ main {
 
 
 @include conf.mobile{
+
+    //Home
+    .home{
+        .b-h1 {
+        
+            width: 70vw;
+            height: 60vh;
+          }
+    }
     //Header
     .container-header{
         gap: 60vw; 
@@ -98,61 +107,111 @@ main {
 
     .about{
 
-        display: grid;
-        grid-template-rows: repeat(2,1fr);
-
+        
         .p-about{
-            grid-row: 2 / 3;
+            grid-row: 4 / 6;
             grid-column: 1 / 3;
-            margin-left: 10%;
-            margin-top: -40%;
-        }
-
-        .b-img {
-
-            grid-column: 1 / 3;
-            grid-row: 1 / 2;
-            background-size: 35%;
-            background-position: 38vw 20vw;
-
+            justify-self: center;
         }
 
         .card-profile{
-
+           
             grid-column: 1 / 3;
-            grid-row: 1 / 2;
-            margin-top: 35%;
-
+            grid-row: 3 / 4;
+            gap: 0.3em;
+        
             .rrss{
-                margin-top: -23%;
-                margin-left: 3%;
-            }
-    
-            img.git{
-                margin-left: 10%;
-            }
-    
-            img.lin{
-                margin-left: 2%;
-            }
+                grid-column: 2;
+                gap: 0.4em;
+                justify-content: center;
 
-            img{
-                margin-left: 50%;
-                margin-top: -25%;
+           }
+           .b-img {
+                justify-self: end;
+                left: 21%;
+                top: 17%;
             }
-
-            .salute{
-                p{
-                    margin-left: 34%;
-                }
-            }
+            .p-animation{display: none;}
         }
-
         
     }
 
+    .skills{
+        .interests{display: none;}
+        .p-skills{
+            grid-column: 1 / 3;
+            width: 76%;
+           
+        }
+
+        img{
+            grid-column: 1 / 3;
+            grid-row: 4 / 5;
+            margin-top: 5vw;
+            justify-self: center;
+        }
+
+    }
     
-    
+    .projects{
+
+        .swiper-projects {
+            grid-column: 1 / 3;
+            grid-row: 3 / 4;
+            max-width: 150px;
+
+            .swiper-slide {
+                min-height: 100px;
+            }
+
+            .swiper-button-next, 
+            .swiper-button-prev{
+                display: none;
+            }
+            
+        }
+
+    }
+
+    .contact{
+        .p-contact {
+            grid-column: 1 / 3;
+            grid-row: 3;
+            width: 75%;
+            height: 0px;
+        }
+
+        img{
+            display: none;
+        }
+        
+
+
+        form {
+            width: 80%;
+            grid-column: 1 / 3;
+            grid-row: 4 / 5;
+            gap: 0.3em;
+
+            label {
+                gap: 0.3em;
+            }
+            input,
+            textarea {
+                padding: 0.4em 0.4em 0.4em 0.4em;
+                border-radius: 0.4em;
+            }
+            
+        }
+
+        .credits {
+            grid-column: 1 / 3;
+            grid-row: 5 / 6;
+            font-size: 0.6em;
+            align-self: center;
+            span {width: 43vw; }
+        }
+    }
 }
 
 
