--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,7 +3,7 @@
 .contact {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     justify-items: center;
     background-color: conf.$secundary-color;
 
@@ -60,7 +60,7 @@
 
         input,
         textarea {
-            font-size: calc(0.5em + 0.5vw);
+            font-size: conf.fontSize(font-body);
             font-family: conf.fontFamily(khmer);
             padding: 1em 1em 1em 1em;
             border-radius: 0.4em;
@@ -69,7 +69,7 @@
 
         button {
             border: 0;
-            font-size: calc(0.5em + 0.6vw);
+            font-size: calc(0.6em + 0.6vw);
             color: white;
             font-family: conf.fontFamily(khmer);
             background-color: conf.$acento-color;
@@ -84,11 +84,13 @@
     .credits {
         grid-column: 1 / 2;
         grid-row: 5 / 6;
+        justify-self: center;
         display: flex;
         flex-direction: column;
         gap: 1em;
-        font-size: calc(0.5em + 0.5vw);
-        margin-left: -12%;
+        font-size: calc(0.6em + 0.5vw);
+      
+        width: 60%;
 
         span {
             border-radius: 0.5em;
