--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -4,7 +4,7 @@
 
     width: 3%;
     left: 1%; 
-    margin-top: calc(9em + 9vw); 
+    margin-top: 19vw; 
     
     .swiper-pagination-bullet {
         
