--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -4,9 +4,10 @@
     
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(5,1fr);
+    grid-template-rows: repeat(6,1fr);
     justify-items: center;
     background-color: conf.$secundary-light-color;
+
 
     .p-about{
         grid-column: 1 / 2;
@@ -20,14 +21,14 @@
 
     .card-profile{
         grid-column: 2 / 3;
-        grid-row: 2 / 5;       
+        grid-row: 3 / 5;       
         align-self: center;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 1em;
 
-        p{
+        .saludo{
            visibility: hidden;
         }
 
@@ -65,16 +66,16 @@
         }
 
         img{
-            width: calc(4em + 17vw);
-            height: calc(4em + 17vw);
+            width: calc(5em + 17vw);
+            height: calc(5em + 17vw);
             z-index: 5;
         }
 
         .b-img {
             position: absolute;
-            top: 4%;
-            width: calc(5em + 32vw);
-            height: calc(4em + 40vw);
+            top: calc(2em + 0.1vw);
+            width: calc(9em + 30vw);
+            height: calc(10em + 33vw);
             z-index: 0;
         }
 
