--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,7 @@
 header {
     position: fixed;
     z-index: 2;
-
+    
     .nav{
         visibility: hidden;
         position: absolute;
@@ -59,7 +59,7 @@ header {
             transform-origin: 4px 0px;
             border-radius: 0.5rem;
             width: calc(2em + 3vw);
-            height: 0.7vh;
+            height: calc(0.2em + 0.1vw);
             background-color: conf.$primary-color;
         }
         
