--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -48,7 +48,7 @@ main {
     flex-direction: column;
 
     h1{
-        font-size: calc(1em + 5vw);
+        font-size: calc(1.5em + 4vw);
 
     }
 
@@ -84,29 +84,38 @@ main {
     .home{
         .b-h1 {
         
-            width: 70vw;
-            height: 60vh;
+            width: 76vw;
+            height: 55vh;
           }
     }
     //Header
     .container-header{
         gap: 60vw; 
+
+        .menu{
+
+            &.close span:nth-child(2){
+                transform: rotate(-35deg) translate(-5px, 8px);
+            }
+            
+        }
     }
 
     //Pagination
     .swiper-pagination{
 
         left: 3%;
-        
+        margin-top: 72vw; 
         .swiper-pagination-bullet {
         
-            width: 3vw;
+            width: 3.5vw;
             height: 2vh;
+            
         }
     }
 
     .about{
-
+        gap: 0.6em;
         
         .p-about{
             grid-row: 4 / 6;
@@ -119,17 +128,20 @@ main {
             grid-column: 1 / 3;
             grid-row: 3 / 4;
             gap: 0.3em;
-        
+            
+            
             .rrss{
                 grid-column: 2;
                 gap: 0.4em;
                 justify-content: center;
 
            }
+
+
            .b-img {
                 justify-self: end;
-                left: 21%;
-                top: 17%;
+                left: 13%;
+                top: 15vw;
             }
             .p-animation{display: none;}
         }
@@ -147,7 +159,7 @@ main {
         img{
             grid-column: 1 / 3;
             grid-row: 4 / 5;
-            margin-top: 5vw;
+            margin-top: 12vw;
             justify-self: center;
         }
 
@@ -157,11 +169,12 @@ main {
 
         .swiper-projects {
             grid-column: 1 / 3;
-            grid-row: 3 / 4;
-            max-width: 150px;
+            grid-row: 4 / 6;
+            max-width: 200px;
+            margin-top: 0;
 
             .swiper-slide {
-                min-height: 100px;
+                min-height: 200px;
             }
 
             .swiper-button-next, 
@@ -178,7 +191,7 @@ main {
             grid-column: 1 / 3;
             grid-row: 3;
             width: 75%;
-            height: 0px;
+            height: 80px;
         }
 
         img{
@@ -188,7 +201,8 @@ main {
 
 
         form {
-            width: 80%;
+            width: 75%;
+            height: 90%;
             grid-column: 1 / 3;
             grid-row: 4 / 5;
             gap: 0.3em;
@@ -196,10 +210,11 @@ main {
             label {
                 gap: 0.3em;
             }
-            input,
-            textarea {
-                padding: 0.4em 0.4em 0.4em 0.4em;
-                border-radius: 0.4em;
+
+            
+            input.name, input.email,  input.subject{
+                height: 5vh;
+    
             }
             
         }
