--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -6,6 +6,8 @@
     grid-template-rows: repeat(6, 1fr);
     justify-items: center;
     background-color: conf.$secundary-color;
+    
+
 
     .p-contact {
         grid-column: 1 / 2;
@@ -17,24 +19,23 @@
     }
 
     img{
-        grid-column: 2 / 3;
-        grid-row: 3 / 5;
-        left: 50%;
-        align-self: center;
         position: absolute;
-        width: calc(12em + 36vw);
-        height: calc(10em + 35vw);
-        z-index: 0;
+        top: 16%;
+        right: 4%;
+        width: 45vw;
+        height: 80vh;
+        z-index: -1;
     }
 
 
     form {
-        width: 70%;
+        width: 65%;
+        height: 90%;
         grid-column: 2 / 3;
-        grid-row: 3 / 5;
+        grid-row: 3 / 6;
         display: flex;
         flex-direction: column;
-        gap: 0.7em;
+        gap: 0.8em;
         z-index: 4;
         align-self: center;
         justify-self: center;
@@ -47,7 +48,7 @@
 
         input::placeholder,
         textarea::placeholder {
-            font-size: calc(0.8em + 0.5vw);
+            font-size: calc(0.8em + 0.2vw);
             font-family: conf.fontFamily(khmer);
             color:rgb(191, 191, 191);
         }
@@ -75,7 +76,7 @@
             background-color: conf.$acento-color;
             border-radius: 0.4em;
             width: 25%;
-            height: 5vh;
+            height: 6vh;
             cursor: pointer;
         }
     }
@@ -83,8 +84,7 @@
 
     .credits {
         grid-column: 1 / 2;
-        grid-row: 5 / 6;
-        justify-self: center;
+        grid-row: 6 / 7;
         display: flex;
         flex-direction: column;
         gap: 1em;
