--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -44,6 +44,7 @@ header {
     .logo{
         width: calc(2em + 6vw);
         margin-left: 1.5rem;
+        cursor: pointer;
     }
     
     .menu{
