--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -181,7 +181,7 @@ main {
     }
     
     .projects{
-
+        grid-template-rows: repeat(9,1fr);
         .swiper-projects {
             grid-column: 1 / 3;
             grid-row: 4 / 6;
